apps/overlays/k3d-example/webserver/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-local-ingress
spec:
  rules:
  - host: webserver.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: webserver-svc
            port:
              number: 80
